Implement header popultion with JS, change fetch method to JQuery get()

--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div layout:fragment="content">
-            <script type="text/javascript" th:src="@{/js/user/populateUserTable.js}"></script>
+            <script type="module" th:src="@{/js/user/populateUserTable.js}"></script>
 
             <h1 id="userMainHeading"></h1>
             <div class="card mt-3">
