--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,13 +7,14 @@
     <body>
         <header class="bg-dark d-flex justify-content-between align-items-center py-2 px-4" th:fragment="header">
             <div class="fs-5">
-                <span class="text-light fw-bold" th:text="${#authentication.name}">username</span>
+                <span class="text-light fw-bold" id="headerUsername"></span>
                 <span class="text-light" > with roles: </span>
-                <span class="text-light fw-bold" th:text="${@templatesUtil.getRolesStringFromAuthorities(#authentication.authorities)}">username</span>
+                <span class="text-light fw-bold" id="headerRoles"></span>
             </div>
 
-            <a sec:authorize="!isAuthenticated()" href="/login" class="d-block link-secondary text-decoration-none" >Log In</a>
-            <a sec:authorize="isAuthenticated()" href="/logout" class="d-block link-secondary text-decoration-none">Logout</a>
+            <a  href="/logout" class="d-block link-secondary text-decoration-none">Logout</a>
+
+            <script type="module" th:src="@{/js/populateLayout.js}"></script>
         </header>>
 
     </body>
