--- a/src/main/resources/templates/admin/users.html
+++ b/src/main/resources/templates/admin/users.html
@@ -3,10 +3,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Users</title>
+    <title>Admin page</title>
 </head>
 <body>
 <div layout:fragment="content">
+    <script type="module" th:src="@{/js/admin/populateAdminPage.js}"></script>
+
     <h1>Admin page</h1>
 
     <nav>
@@ -21,7 +23,7 @@
                 <h5 class="card-header p-3">All users</h5>
 
                 <div class="card-body">
-                    <table class="table table-striped border-top">
+                    <table class="table table-striped border-top" id="adminUsersTable">
                         <thead>
                         <tr>
                             <th scope="col">ID</th>
@@ -34,25 +36,7 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <tr th:each="user : ${users}">
-                            <td  th:text="${user.getId()}"></td>
-                            <td  th:text="${user.getUsername()}"></td>
-                            <td  th:text="${user.getContactInfo().getEmail()}"></td>
-                            <td  th:text="${user.getContactInfo().getPhone()}"></td>
-                            <td  th:text="${@templatesUtil.getRolesStringFromAuthorities(user.getRoles())}"></td>
-                            <td>
-                                <button type="button" data-bs-toggle="modal" th:attr="data-bs-target='#editModal'+${user.getId()}" class="btn btn-info">Edit</button>
 
-                                <div th:replace="~{/fragments/modals/edit_modal}">edit modal</div>
-                            </td>
-                            <td>
-                                <button type="button" data-bs-toggle="modal" th:attr="data-bs-target='#deleteModal'+${user.getId()}" class="btn btn-danger">Delete</button>
-
-                                <div th:replace="~{/fragments/modals/delete_modal}">delete modal</div>
-                            </td>
-
-
-                        </tr>
                         </tbody>
                     </table>
                 </div>
@@ -61,47 +45,52 @@
 
 <!--        ADD USER TAB-->
 
-        <div class="tab-pane fade" id="nav-new-user" role="tabpanel" aria-labelledby="nav-new-user-tab" tabindex="0">
+<!--        <div class="tab-pane fade" id="nav-new-user" role="tabpanel" aria-labelledby="nav-new-user-tab" tabindex="0">-->
 
-            <div class="card">
-                <h5 class="card-header p-3">Add new user</h5>
+<!--            <div class="card">-->
+<!--                <h5 class="card-header p-3">Add new user</h5>-->
 
-                <div class="card-body d-flex justify-content-center text-center">
-                    <form th:method="POST" th:action="@{/admin}" th:object="${newUser}" class="col-4">
-                        <div class="form-group mb-3" >
-                            <label for="username" class="form-label fw-bold">Username</label>
-                            <input type="text" class="form-control" th:field="*{username}" id="username" />
-                        </div>
+<!--                <div class="card-body d-flex justify-content-center text-center">-->
+<!--                    <form th:method="POST" th:action="@{/admin}" th:object="${newUser}" class="col-4">-->
+<!--                        <div class="form-group mb-3" >-->
+<!--                            <label for="username" class="form-label fw-bold">Username</label>-->
+<!--                            <input type="text" class="form-control" th:field="*{username}" id="username" />-->
+<!--                        </div>-->
 
-                        <div class="form-group mb-3">
-                            <label for="password" class="form-label fw-bold">Password</label>
-                            <input type="text" class="form-control" th:field="*{password}" id="password" />
-                        </div>
+<!--                        <div class="form-group mb-3">-->
+<!--                            <label for="password" class="form-label fw-bold">Password</label>-->
+<!--                            <input type="text" class="form-control" th:field="*{password}" id="password" />-->
+<!--                        </div>-->
 
-                        <div class="form-group mb-3">
-                            <label for="email" class="form-label fw-bold">Email</label>
-                            <input type="email" class="form-control" th:field="*{contactInfo.email}"  id="email" />
-                        </div>
+<!--                        <div class="form-group mb-3">-->
+<!--                            <label for="email" class="form-label fw-bold">Email</label>-->
+<!--                            <input type="email" class="form-control" th:field="*{contactInfo.email}"  id="email" />-->
+<!--                        </div>-->
 
-                        <div class="form-group mb-3">
-                            <label for="phone" class="form-label fw-bold">Phone number</label>
-                            <input type="text" class="form-control " th:field="*{contactInfo.phone}"  id="phone" />
-                        </div>
+<!--                        <div class="form-group mb-3">-->
+<!--                            <label for="phone" class="form-label fw-bold">Phone number</label>-->
+<!--                            <input type="text" class="form-control " th:field="*{contactInfo.phone}"  id="phone" />-->
+<!--                        </div>-->
 
-                        <div class="form-group mb-3">
-                            <label for="roles" class="form-label fw-bold">Roles:</label>
-                            <select class="form-select" th:size="${#lists.size(roles)}" multiple aria-label="roles" name="roleIds" id="roles">
-                                <option th:each="role : ${roles}" th:value="${role.id}" th:text="${role.name}">role name</option>
-                            </select>
-                        </div>
+<!--                        <div class="form-group mb-3">-->
+<!--                            <label for="roles" class="form-label fw-bold">Roles:</label>-->
+<!--                            <select class="form-select" th:size="${#lists.size(roles)}" multiple aria-label="roles" name="roleIds" id="roles">-->
+<!--                                <option th:each="role : ${roles}" th:value="${role.id}" th:text="${role.name}">role name</option>-->
+<!--                            </select>-->
+<!--                        </div>-->
 
-                        <button class="btn btn-success" type="submit">Add user</button>
+<!--                        <button class="btn btn-success" type="submit">Add user</button>-->
 
-                    </form>
-                </div>
-            </div>
+<!--                    </form>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
         </div>
-        </div>
+
+<!--    MODALS-->
+    <div th:replace="~{/fragments/modals/edit_modal}">edit modal</div>
+    <div th:replace="~{/fragments/modals/delete_modal}">delete modal</div>
+
     </div>
 </div>
 </body>
