--- a/src/main/resources/templates/fragments/modals/delete_modal.html
+++ b/src/main/resources/templates/fragments/modals/delete_modal.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<div class="modal fade" th:id="deleteModal+${user.id}" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true" th:fragment="delete-modal">
+<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true" th:fragment="delete-modal">
 
     <div class="modal-dialog">
         <div class="modal-content">
@@ -18,44 +18,44 @@
             <div class="modal-body">
 
                 <div class="d-flex justify-content-center text-center">
-                    <form th:method="POST" th:action="@{/admin/delete(id=${user.getId()})}" class="col-4" th:id="deleteForm+${user.id}">
-                        <div class="form-group mb-3" >
-                            <label for="deleteId" class="form-label fw-bold">ID</label>
-                            <input disabled type="text" class="form-control" id="deleteId" th:value="${user.id}" name="id"/>
-                        </div>
-                        <div class="form-group mb-3" >
-                            <label for="deleteUsername" class="form-label fw-bold">Username</label>
-                            <input disabled type="text" class="form-control" id="deleteUsername" th:value="${user.username}" name="username"/>
-                        </div>
+<!--                    <form th:method="POST" th:action="@{/admin/delete(id=${user.getId()})}" class="col-4" th:id="deleteForm+${user.id}">-->
+<!--                        <div class="form-group mb-3" >-->
+<!--                            <label for="deleteId" class="form-label fw-bold">ID</label>-->
+<!--                            <input disabled type="text" class="form-control" id="deleteId" th:value="${user.id}" name="id"/>-->
+<!--                        </div>-->
+<!--                        <div class="form-group mb-3" >-->
+<!--                            <label for="deleteUsername" class="form-label fw-bold">Username</label>-->
+<!--                            <input disabled type="text" class="form-control" id="deleteUsername" th:value="${user.username}" name="username"/>-->
+<!--                        </div>-->
 
-                        <div class="form-group mb-3">
-                            <label for="deletePassword" class="form-label fw-bold">Password</label>
-                            <input disabled type="text" class="form-control" id="deletePassword" th:value="${user.password}" name="password"/>
-                        </div>
+<!--                        <div class="form-group mb-3">-->
+<!--                            <label for="deletePassword" class="form-label fw-bold">Password</label>-->
+<!--                            <input disabled type="text" class="form-control" id="deletePassword" th:value="${user.password}" name="password"/>-->
+<!--                        </div>-->
 
-                        <div class="form-group mb-3">
-                            <label for="deleteEmail" class="form-label fw-bold">Email</label>
-                            <input disabled type="email" class="form-control"  id="deleteEmail" th:value="${user.contactInfo.email}" name="contactInfo.email"/>
-                        </div>
+<!--                        <div class="form-group mb-3">-->
+<!--                            <label for="deleteEmail" class="form-label fw-bold">Email</label>-->
+<!--                            <input disabled type="email" class="form-control"  id="deleteEmail" th:value="${user.contactInfo.email}" name="contactInfo.email"/>-->
+<!--                        </div>-->
 
-                        <div class="form-group mb-3">
-                            <label for="deletePhone" class="form-label fw-bold">Phone number</label>
-                            <input disabled type="text" class="form-control"  id="deletePhone" th:value="${user.contactInfo.phone}" name="contactInfo.phone"/>
-                        </div>
+<!--                        <div class="form-group mb-3">-->
+<!--                            <label for="deletePhone" class="form-label fw-bold">Phone number</label>-->
+<!--                            <input disabled type="text" class="form-control"  id="deletePhone" th:value="${user.contactInfo.phone}" name="contactInfo.phone"/>-->
+<!--                        </div>-->
 
-                        <div class="form-group mb-3">
-                            <label for="deleteRoles" class="form-label fw-bold">Roles:</label>
-                            <select disabled class="form-select" th:size="${#lists.size(roles)}" multiple aria-label="roles" name="roleIds" id="deleteRoles">
-                                <option th:each="role : ${roles}" th:value="${role.id}" th:text="${role.name}" th:selected="${#lists.contains(user.getRoles(), role)}">role name</option>
-                            </select>
-                        </div>
-                    </form>
+<!--                        <div class="form-group mb-3">-->
+<!--                            <label for="deleteRoles" class="form-label fw-bold">Roles:</label>-->
+<!--                            <select disabled class="form-select" th:size="${#lists.size(roles)}" multiple aria-label="roles" name="roleIds" id="deleteRoles">-->
+<!--                                <option th:each="role : ${roles}" th:value="${role.id}" th:text="${role.name}" th:selected="${#lists.contains(user.getRoles(), role)}">role name</option>-->
+<!--                            </select>-->
+<!--                        </div>-->
+<!--                    </form>-->
                 </div>
 
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="submit" class="btn btn-danger" th:form="deleteForm+${user.id}">Delete</button>
+                <button type="submit" class="btn btn-danger">Delete</button>
             </div>
 
         </div>
