--- a/src/main/resources/templates/fragments/modals/edit_modal.html
+++ b/src/main/resources/templates/fragments/modals/edit_modal.html
@@ -17,7 +17,7 @@
             </div>
             <div class="modal-body">
 
-                <div class="d-flex justify-content-center text-center">
+                <div class="d-flex justify-content-center text-center" id="editModalFormDiv">
 <!--                    <form th:method="POST" th:action="@{/admin/update(id=${user.getId()})}" class="col-4" th:id="editForm+${user.id}">-->
 <!--                        <div class="form-group mb-3" >-->
 <!--                            <label for="editId" class="form-label fw-bold">ID</label>-->
