--- a/src/main/resources/templates/fragments/modals/edit_modal.html
+++ b/src/main/resources/templates/fragments/modals/edit_modal.html
@@ -55,7 +55,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="submit" class="btn btn-primary">Edit</button>
+                <button type="submit" class="btn btn-primary" form="editModalForm">Edit</button>
             </div>
 
         </div>
