--- a/src/main/resources/templates/fragments/modals/delete_modal.html
+++ b/src/main/resources/templates/fragments/modals/delete_modal.html
@@ -17,7 +17,7 @@
             </div>
             <div class="modal-body">
 
-                <div class="d-flex justify-content-center text-center">
+                <div class="d-flex justify-content-center text-center" id="deleteModalFormDiv">
 <!--                    <form th:method="POST" th:action="@{/admin/delete(id=${user.getId()})}" class="col-4" th:id="deleteForm+${user.id}">-->
 <!--                        <div class="form-group mb-3" >-->
 <!--                            <label for="deleteId" class="form-label fw-bold">ID</label>-->
@@ -55,7 +55,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="submit" class="btn btn-danger">Delete</button>
+                <button type="submit" class="btn btn-danger" form="deleteModalForm">Delete</button>
             </div>
 
         </div>
