--- a/src/main/resources/templates/admin/users.html
+++ b/src/main/resources/templates/admin/users.html
@@ -45,12 +45,12 @@
 
 <!--        ADD USER TAB-->
 
-<!--        <div class="tab-pane fade" id="nav-new-user" role="tabpanel" aria-labelledby="nav-new-user-tab" tabindex="0">-->
+        <div class="tab-pane fade" id="nav-new-user" role="tabpanel" aria-labelledby="nav-new-user-tab" tabindex="0">
 
-<!--            <div class="card">-->
-<!--                <h5 class="card-header p-3">Add new user</h5>-->
+            <div class="card">
+                <h5 class="card-header p-3">Add new user</h5>
 
-<!--                <div class="card-body d-flex justify-content-center text-center">-->
+                <div class="card-body d-flex justify-content-center text-center" id="addUserFormContainer">
 <!--                    <form th:method="POST" th:action="@{/admin}" th:object="${newUser}" class="col-4">-->
 <!--                        <div class="form-group mb-3" >-->
 <!--                            <label for="username" class="form-label fw-bold">Username</label>-->
@@ -82,9 +82,9 @@
 <!--                        <button class="btn btn-success" type="submit">Add user</button>-->
 
 <!--                    </form>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
+                </div>
+            </div>
+        </div>
         </div>
 
 <!--    MODALS-->
