Fix index page links, add logging to all requests from js

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header th:insert="fragments/header.html :: header"> </header>
-<a href="admin/users">Go to admin page</a>
+<a href="admin">Go to admin page</a>
 <br />
 <a href="user">Go to user page</a>
 </body>
